--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -8,8 +8,9 @@ on:
 env:
   AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g. us-west-1
   REGISTRY_ALIAS: c8r7r8g5                # aws ecr public alias
-  REPOSITORY: chobiolab/tools/coresc         # aws ecr repo path
+  REPOSITORY: chobiolab/tools/coresc      # aws ecr repo path
   BUILD_PATH: .                           # dir location of build files in repo
+  CORESC_VER: 0.1.7-beta                  # version of coreSC
 
 permissions:
   contents: read
@@ -49,5 +50,5 @@ jobs:
       env:
         REGISTRY: ${{ steps.login-ecr-public.outputs.registry }}
       run: |
-        docker build -t $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY $BUILD_PATH
-        docker push $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY
+        docker build -t $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$CORESC_VER $BUILD_PATH
+        docker push $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$CORESC_VER
