--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -10,7 +10,7 @@ env:
   REGISTRY_ALIAS: c8r7r8g5                # aws ecr public alias
   REPOSITORY: chobiolab/tools/coresc      # aws ecr repo path
   BUILD_PATH: .                           # dir location of build files in repo
-  CORESC_VER: 0.1.7-beta                  # version of coreSC
+  CORESC_VER: 1.0.0                       # version of coreSC
 
 permissions:
   contents: read
