--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -10,7 +10,7 @@ env:
   REGISTRY_ALIAS: c8r7r8g5                # aws ecr public alias
   REPOSITORY: chobiolab/tools/coresc      # aws ecr repo path
   BUILD_PATH: .                           # dir location of build files in repo
-  CORESC_VER: 1.0.0                       # version of coreSC
+  CORESC_VER: latest                      # version of coreSC
 
 permissions:
   contents: read
@@ -51,4 +51,4 @@ jobs:
         REGISTRY: ${{ steps.login-ecr-public.outputs.registry }}
       run: |
         docker build -t $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$CORESC_VER $BUILD_PATH
-        docker push $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$CORESC_VER
+        docker push $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:latest
